syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.datacollect";
option java_outer_classname = "DataCollectProto";
option objc_class_prefix = "DCP";

service DataCollectionService {
    rpc GetFundDataOfDay (DailyFundsQuery) returns (DailyFundsCollection) {
    }
}

message DailyFundsQuery {
  repeated string codes = 1;
  string nav_latest_date = 2;
}

message DailyFundsCollection{
  repeated DailyFunds dailyFunds = 1;
}

message DailyFunds {
  string id = 1;
  double nav_unit = 2;//单位净值
  float fund_scale = 3;//基金规模
  double nav_accum = 4;//累计单位净值
  float yield_of_7_days = 5;//7日年化收益率
  double nav_adj = 6;//复权单位净值
  int64 nav_latest_date = 7;//最新净值日期
  double million_revenue = 8;//万份基金单位收益
  float bm_index_chg_pct = 9;//标的指数涨跌幅
  string code = 10;//基金代码
  string fname = 11;//基金名称
  string fund_type_one = 12;//基金一级分类
  string fund_type_two = 13;//基金二级分类
  string close = 14;//日行情收盘价
}