syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.datacollect";
option java_outer_classname = "DataCollectProto";
option objc_class_prefix = "DCP";

service DataCollectionService {
    rpc GetFundDataOfDay (DailyFundsQuery) returns (DailyFundsCollection) {
    }
    rpc GetFundsPrice (FundCodes) returns (FundInfos) {
    }
}

message DailyFundsQuery {
  repeated string codes = 1;
  string nav_latest_date_start = 2;
  string nav_latest_date_end = 3;
}

message DailyFundsCollection{
  repeated DailyFunds dailyFunds = 1;
}

message DailyFunds {
  string id = 1;
  string code = 2;//基金代码
  double navaccum = 3; //累计净值
  double navadj = 4;//净ADJ
  int64 nav_latest_date = 5;//最新净值日期
  string navreturnrankingp = 6;//单位回报排名
  string navreturnrankingpctp = 7;//单位回报百分比排名
  double navsimiavgreturnp = 8;//
  double navunit = 9;//累计单位净值
  int64 querydate = 10; //更新日期
  int64 update = 11; //更新日期
  string fname = 12;//基金名称
  string first_invest_type = 13;//基金一级分类
  string second_invest_type = 14;//基金二级分类
  string close = 15;//日行情收盘价
}


//获取当前基金信息
message FundCodes {
  repeated string fund_code = 1;//基金code,
}

message FundInfos{
  repeated FundInfo fund_info = 1;//基金信息
}

message FundInfo {
  string fund_code = 1;//基金code
  int32 navunit = 2 ;//基金单位净值
}
